tests/files/flow_controller_tests/should_run/078.cmdr
x = 8.8;
print cot(x);