tests/files/flow_controller_tests/should_fail/057.cmdr
x = false;
print cot(x);